// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot de Componentes Base > Badge - variantes 1`] = `
<div>
  <span
    class="inline-flex items-center rounded-full px-2.5 py-0.5 text-xs font-semibold select-none border transition-colors bg-primary text-primary-foreground border-transparent hover:opacity-90"
  >
    Badge Primary
  </span>
</div>
`;

exports[`Snapshot de Componentes Base > Badge - variantes 2`] = `
<div>
  <span
    class="inline-flex items-center rounded-full px-2.5 py-0.5 text-xs font-semibold select-none border transition-colors bg-emerald-500/10 text-emerald-600 dark:text-emerald-400 border-emerald-500/20"
  >
    Badge Success
  </span>
</div>
`;

exports[`Snapshot de Componentes Base > Button - variantes e estados 1`] = `
<div>
  <button
    aria-busy="false"
    class="inline-flex items-center justify-center font-semibold rounded-full transition-all active:scale-[0.98] focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 select-none touch-manipulation min-h-[44px] min-w-[44px] bg-primary text-primary-foreground hover:opacity-95 shadow-md shadow-primary/10 text-sm px-5 py-2.5 gap-2"
  >
    Primary
  </button>
</div>
`;

exports[`Snapshot de Componentes Base > Button - variantes e estados 2`] = `
<div>
  <button
    aria-busy="false"
    class="inline-flex items-center justify-center font-semibold rounded-full transition-all active:scale-[0.98] focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 select-none touch-manipulation min-h-[44px] min-w-[44px] border border-border bg-background text-foreground hover:bg-accent hover:text-accent-foreground text-xs px-3 py-1.5 gap-1.5"
  >
    Outline
  </button>
</div>
`;

exports[`Snapshot de Componentes Base > Button - variantes e estados 3`] = `
<div>
  <button
    aria-busy="true"
    class="inline-flex items-center justify-center font-semibold rounded-full transition-all active:scale-[0.98] focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 select-none touch-manipulation min-h-[44px] min-w-[44px] bg-primary text-primary-foreground hover:opacity-95 shadow-md shadow-primary/10 text-sm px-5 py-2.5 gap-2"
    disabled=""
  >
    <svg
      aria-hidden="true"
      class="animate-spin h-4 w-4 shrink-0 text-current"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="opacity-25"
        cx="12"
        cy="12"
        r="10"
        stroke="currentColor"
        stroke-width="4"
      />
      <path
        class="opacity-75"
        d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
        fill="currentColor"
      />
    </svg>
    Loading
  </button>
</div>
`;

exports[`Snapshot de Componentes Base > Card - estrutura 1`] = `
<div>
  <div
    class="rounded-lg border border-border bg-card text-card-foreground shadow-xs transition-all duration-200 hover:shadow-md hover:border-slate-300 dark:hover:border-slate-800 hover:-translate-y-0.5"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <h3
        class="text-xl font-bold leading-none tracking-tight"
      >
        Título do Card
      </h3>
      <p
        class="text-sm text-muted-foreground leading-normal"
      >
        Descrição do Card
      </p>
    </div>
    <div
      class="p-6 pt-0 leading-relaxed"
    >
      Conteúdo do Card
    </div>
    <div
      class="flex items-center p-6 pt-0 gap-4"
    >
      Rodapé do Card
    </div>
  </div>
</div>
`;

exports[`Snapshot de Componentes Base > EmptyState - ações 1`] = `
<div>
  <div
    class="flex flex-col items-center justify-center p-8 text-center rounded-lg border border-dashed border-border bg-card text-card-foreground shadow-xs max-w-md mx-auto"
  >
    <div
      class="mb-4 text-muted-foreground flex items-center justify-center"
    >
      <svg
        aria-hidden="true"
        fill="none"
        height="48"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="48"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <line
          x1="8"
          x2="16"
          y1="12"
          y2="12"
        />
      </svg>
    </div>
    <h3
      class="text-lg font-bold tracking-tight mb-1"
    >
      Nenhum resultado
    </h3>
    <p
      class="text-sm text-muted-foreground mb-6 max-w-xs leading-normal"
    >
      Refine sua busca
    </p>
    <button
      aria-busy="false"
      class="inline-flex items-center justify-center font-semibold rounded-full transition-all active:scale-[0.98] focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 select-none touch-manipulation min-h-[44px] min-w-[44px] border border-border bg-background text-foreground hover:bg-accent hover:text-accent-foreground text-xs px-3 py-1.5 gap-1.5"
    >
      Limpar filtros
    </button>
  </div>
</div>
`;

exports[`Snapshot de Componentes Base > ErrorBoundary - comportamento normal 1`] = `
<div>
  <div>
    Tudo funcionando
  </div>
</div>
`;

exports[`Snapshot de Componentes Base > Input - estados 1`] = `
<div>
  <input
    aria-invalid="false"
    class="flex h-11 w-full rounded-md border border-input bg-background px-3 py-2 text-sm text-foreground ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 min-h-[44px]"
    placeholder="Digite algo"
    type="text"
  />
</div>
`;

exports[`Snapshot de Componentes Base > Input - estados 2`] = `
<div>
  <input
    aria-invalid="true"
    class="flex h-11 w-full rounded-md border bg-background px-3 py-2 text-sm text-foreground ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 min-h-[44px] border-destructive focus-visible:ring-destructive"
    placeholder="Erro"
    type="text"
  />
</div>
`;

exports[`Snapshot de Componentes Base > LoadingSpinner - tamanhos 1`] = `
<div>
  <div
    aria-label="Carregando"
    class="flex items-center justify-center p-2"
    role="status"
  >
    <svg
      class="animate-spin text-primary h-8 w-8 stroke-[2]"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="opacity-10/100"
        cx="12"
        cy="12"
        r="10"
        stroke="currentColor"
        stroke-width="4"
      />
      <path
        class="opacity-75/100"
        d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
        fill="currentColor"
      />
    </svg>
    <span
      class="sr-only"
    >
      Carregando...
    </span>
  </div>
</div>
`;

exports[`Snapshot de Componentes Base > Modal - fechado 1`] = `<div />`;

exports[`Snapshot de Componentes Base > Select - renderização 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <select
      aria-invalid="false"
      class="flex h-11 w-full rounded-md border border-input bg-background px-3 py-2 pr-10 text-sm text-foreground placeholder:text-muted-foreground focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 appearance-none cursor-pointer min-h-[44px]"
    >
      <option
        value="1"
      >
        Opção 1
      </option>
      <option
        value="2"
      >
        Opção 2
      </option>
    </select>
    <div
      class="absolute top-1/2 right-3 -translate-y-1/2 pointer-events-none text-muted-foreground"
    >
      <svg
        aria-hidden="true"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6 9 6 6 6-6"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Snapshot de Componentes Base > Sheet - fechado 1`] = `<div />`;

exports[`Snapshot de Componentes Base > Tooltip - dica rápida 1`] = `
<div>
  <div
    class="relative inline-flex items-center"
  >
    <div
      aria-describedby="_r_0_"
      class="inline-flex"
    >
      <span>
        Passe o mouse
      </span>
    </div>
  </div>
</div>
`;
